--- a/source/index.html
+++ b/source/index.html
@@ -4,22 +4,24 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Пинк</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="format-detection" content="telephone=no">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <header class="page-header">
-    <nav class="main-nav page-header__menu">
+    <nav class="main-nav main-nav--opened page-header__menu">
       <div class="main-nav__top">
-        <a class="page-header__logo">
-          <img class="page-header__logo-image" src="http://placehold.it/150x100" width="150" height="100" alt="Пинк">
+        <a class="main-nav__logo">
+          <img class="main-nav__logo-image" src="img/logo-pink-white-mobile.svg" width="75" height="22" alt="Пинк">
         </a>
-        <button class="page-header__menu">
+        <button class="main-nav__menu">
           <span class="visually-hidden">Меню</span>
         </button>
       </div>
       <ul class="main-nav__list">
-        <li class="main-nav__item">
+        <li class="main-nav__item main-nav__item--active">
           <a class="main-nav__link">Главная</a>
         </li>
         <li class="main-nav__item">
@@ -38,9 +40,14 @@
     <h1 class="visually-hidden">Пинк</h1>
     <div class="hero hero--main">
       <div class="hero__image">
-        <img class="hero__picture" src="http://placehold.it/150x100" width="150" height="100" alt="Смартфон с приложением">
+        <picture>
+          <source media="(min-width:660px)" srcset="img/iphone-hand-tablet@1x.png">
+          <source media="(min-width:1200px)" srcset="img/iphone-hand-desktop@1x.png">
+          <img class="hero__picture" src="img/iphone-hand-mobile@1x.png" width="258" height="286" alt="Рука держит смартфон с открытым приложением">
+        </picture>
       </div>
       <div class="hero__download">
+        <p class="hero__title">Взгляните на жизнь иначе!</p>
         <a class="round-button hero__download-button" href="#">Скачайте приложение</a>
         <ul class="hero__device device">
           <li class="device__item">
@@ -66,40 +73,67 @@
       <h2 class="visually-hidden">О приложении</h2>
       <div class="information__header section-header">
         <p class="section-header__hook">Устали от серости мегаполиса?</p>
-        <p class="section-header__hook">Нам есть, что вам предложить!</p>
+        <p class="section-header__hook section-header__hook--narrow">Нам есть, что вам предложить!</p>
       </div>
       <div class="features">
         <ul class="features__list">
           <li class="features__item">
+            <div class="features__pic">
+              <picture>
+                <source media="(min-width:1200px)" srcset="img/iphone-screen-1-desktop@1x.png">
+                <img class="features__image" src="img/iphone-screen-1-tablet@1x.png" width="150" height="100" alt="Cмартфон с черно-белым изображением">
+              </picture>
+            </div>
             <h3 class="features__title">Поднимает настроение</h3>
             <p class="features__description">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
           </li>
           <li class="features__item">
+            <div class="features__pic">
+              <picture>
+                <source media="(min-width:1200px)" srcset="img/iphone-screen-2-desktop@1x.png">
+                <img class="features__image features__image--mobile" src="img/iphone-screen-2-tablet@1x.png" width="150" height="100" alt="Cмартфон с розовым изображением">
+              </picture>
+            </div>
             <h3 class="features__title">Меняет мир вокруг</h3>
             <p class="features__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
           </li>
           <li class="features__item">
+            <div class="features__pic features__pic--mobile">
+              <picture>
+                <source media="(min-width:660px)" srcset="img/iphone-screen-3-tablet@1x.png">
+                <source media="(min-width:1200px)" srcset="img/iphone-screen-3-desktop@1x.png">
+                <img class="features__image" src="img/iphone-screen-mobile@1x.png" width="157" height="330" alt="Cмартфон со смайликом и надписью всем привет">
+              </picture>
+            </div>
             <h3 class="features__title">Заводит новых друзей</h3>
             <p class="features__description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
           </li>
         </ul>
-        <img class="features__image" src="http://placehold.it/150x100" width="150" height="100" alt="Экран смартфона">
+      </div>
+    </section>
+    <section class="effect">
+      <div class="effect__image">
+        <img class="effect__timer" src="img/icon-timer.svg" width="238" height="276" alt="часы">
+      </div>
+      <div class="effect__description">
+        <h2 class="effect__title">Эффект на 24 часа!</h2>
+        <p class="effect__text">Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!</p>
+        <a class="effect__more" href="#">Узнать больше об исследовании</a>
       </div>
     </section>
     <section class="review">
       <h2 class="visually-hidden">Отзывы пользователей</h2>
       <div class="review__wrapper slider">
+        <p class="review__carousel-buttons slider__carousel-buttons">
+          <button class="slider__carousel-button slider__carousel-button--prev" type="button"><span class="visually-hidden">предыдущий</span></button>
+          <button class="slider__carousel-button slider__carousel-button--next" type="button"><span class="visually-hidden">следующий</span></button>
+        </p>
         <ul class="review__list slider__list">
           <li class="review__item slider__item">
-            <p class="review__name">Николай Петров</p>
-            <p class="review__description">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
-          </li>
-          <li class="review__item slider__item">
-            <p class="review__name">Николай Петров</p>
-            <p class="review__description">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
-          </li>
-          <li class="review__item slider__item">
-            <p class="review__name">Николай Петров</p>
+            <div class="review__user">
+              <p class="review__name">Николай Петров</p>
+              <p class="review__information">25 лет, водитель трамвая</p>
+            </div>
             <p class="review__description">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
           </li>
         </ul>
@@ -115,6 +149,8 @@
       <div class="price__wrapper slider">
         <table class="price__packages packages slider__list">
           <tr class="packages__description">
+            <th class="packages__header packages__header--empty">
+            </th>
             <th class="packages__header">
               <p class="packages__title">База</p>
               <p class="packages__price">1,99 USD</p>
@@ -129,24 +165,54 @@
             </th>
           </tr>
           <tr class="packages__description">
-            <td class="packages__include packages__include--true">Розовый фильтр <span class="visually-hidden">доступно</span></td>
-            <td class="packages__include packages__include--true">Розовый фильтр <span class="visually-hidden">доступно</span></td>
-            <td class="packages__include packages__include--true">Розовый фильтр <span class="visually-hidden">доступно</span></td>
+            <td class="packages__offer">Розовый фильтр</td>
+            <td class="packages__include packages__include--true">
+              <p class="packages__comment">Розовый фильтр</p>
+              <p class="visually-hidden">доступно</p>
+            </td>
+            <td class="packages__include packages__include--true">
+              <p class="packages__comment">Розовый фильтр</p>
+              <p class="visually-hidden">доступно</p>
+            </td>
+            <td class="packages__include packages__include--true">
+              <p class="packages__comment">Розовый фильтр</p>
+              <p class="visually-hidden">доступно</p>
+            </td>
           </tr>
           <tr class="packages__description">
-            <td class="packages__include packages__include--false">Смайлики <span class="visually-hidden">недоступно</span></td>
-            <td class="packages__include packages__include--true">Смайлики <span class="visually-hidden">доступно</span></td>
-            <td class="packages__include packages__include--true">Смайлики <span class="visually-hidden">доступно</span></td>
+            <td class="packages__offer">Смайлики</td>
+            <td class="packages__include packages__include--false">
+              <p class="packages__comment">Смайлики</p>
+              <p class="visually-hidden">недоступно</p>
+            </td>
+            <td class="packages__include packages__include--true">
+              <p class="packages__comment">Смайлики</p>
+              <p class="visually-hidden">доступно</p>
+            </td>
+            <td class="packages__include packages__include--true">
+              <p class="packages__comment">Смайлики</p>
+              <p class="visually-hidden">доступно</p>
+            </td>
           </tr>
           <tr class="packages__description">
-            <td class="packages__include packages__include--false">Комментарии <span class="visually-hidden">недоступно</span></td>
-            <td class="packages__include packages__include--false">Комментарии <span class="visually-hidden">недоступно</span></td>
-            <td class="packages__include packages__include--true">Комментарии <span class="visually-hidden">доступно</span></td>
+            <td class="packages__offer">Комментарии</td>
+            <td class="packages__include packages__include--false">
+              <p class="packages__comment">Комментарии</p>
+              <p class="visually-hidden">недоступно</p>
+            </td>
+            <td class="packages__include packages__include--false">
+              <p class="packages__comment">Комментарии</p>
+              <p class="visually-hidden">недоступно</p>
+            </td>
+            <td class="packages__include packages__include--true">
+              <p class="packages__comment">Комментарии</p>
+              <p class="visually-hidden">доступно</p>
+            </td>
           </tr>
         </table>
         <p class="price__toggles slider__toggles">
           <button class="slider__toggle" type="button"></button>
-          <button class="slider__toggle" type="button"></button>
+          <button class="slider__toggle slider__toggle--active" type="button"></button>
           <button class="slider__toggle" type="button"></button>
         </p>
       </div>
@@ -162,9 +228,9 @@
             <h3 class="contacts-list__title">Звоните:</h3>
             <p class="contacts-list__address">+7 (812) 555-66-66</p>
           </li>
-          <li class="contacts-list__item">
+          <li class="contacts-list__item contacts-list__item--mail">
             <h3 class="contacts-list__title">Пишите:</h3>
-            <p class="contacts-list__address">mail@htmlacademy.ru</p>
+            <a class="contacts-list__address contacts-list__address--link" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
           </li>
           <li class="contacts-list__item">
             <h3 class="contacts-list__title">Приезжайте в гости:</h3>
@@ -173,12 +239,24 @@
           </li>
         </ul>
       </div>
-      <div class="map"></div>
+      <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d999.2920550188102!2d30.3217062938429!3d59.93904297221421!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2sBolshaya+Konyushennaya+Street%2C+19%2F8%2C+Sankt-Peterburg%2C+191186!5e0!3m2!1sen!2sru!4v1539203350233"
+          style="border:0"></iframe>
+      </div>
     </section>
   </main>
   <footer class="page-footer page-footer--mobile-hidden">
-    <a class="page-footer__logo">
-      <img class="page-footer__logo-image" src="http://placehold.it/150x100" width="150" height="100" alt="пинк лого">
+    <a class="page-footer__logo" href="#">
+        <svg class="page-footer__logo-image" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="146.3px" height="40.375px" viewBox="0 0 146.3 40.375" enable-background="new 0 0 146.3 40.375" xml:space="preserve">
+          <g>
+            <path fill="#283645" d="M71.874,18.661c0-0.708,0.58-1.288,1.256-1.288h7.18c5.087,0,8.436,2.704,8.436,7.146v0.063 c0,4.86-4.057,7.373-8.854,7.373h-5.475v6.825c0,0.708-0.58,1.287-1.289,1.287c-0.676,0-1.256-0.58-1.256-1.287L71.874,18.661 L71.874,18.661z M79.988,29.641c3.734,0,6.182-1.996,6.182-4.959v-0.062c0-3.221-2.414-4.894-6.053-4.894h-5.699v9.917h5.57V29.641 z"/>
+            <path fill="#283645" d="M93.603,18.5c0-0.708,0.579-1.288,1.255-1.288c0.709,0,1.288,0.58,1.288,1.288v20.283 c0,0.708-0.579,1.287-1.288,1.287c-0.676,0-1.255-0.579-1.255-1.287V18.5z"/>
+            <path fill="#283645" d="M102.744,18.532c0-0.676,0.58-1.256,1.256-1.256h0.354c0.58,0,0.935,0.29,1.288,0.74l13.684,17.45V18.468 c0-0.676,0.547-1.256,1.256-1.256c0.676,0,1.225,0.58,1.225,1.256v20.349c0,0.677-0.48,1.19-1.158,1.19h-0.129 c-0.548,0-0.936-0.321-1.318-0.772l-13.976-17.867v17.449c0,0.677-0.547,1.257-1.257,1.257c-0.676,0-1.223-0.58-1.223-1.257V18.532 H102.744z"/>
+            <path fill="#283645" d="M128.173,18.5c0-0.708,0.58-1.288,1.257-1.288c0.708,0,1.286,0.58,1.286,1.288v12.331l12.848-13.16 c0.29-0.257,0.579-0.451,0.998-0.451c0.676,0,1.225,0.612,1.225,1.256c0,0.354-0.162,0.644-0.42,0.901l-7.984,7.92l8.564,10.561 c0.225,0.291,0.354,0.547,0.354,0.936c0,0.676-0.577,1.288-1.285,1.288c-0.482,0-0.807-0.259-1.03-0.58l-8.401-10.464l-4.863,4.861 v4.895c0,0.708-0.578,1.288-1.286,1.288c-0.677,0-1.257-0.58-1.257-1.288V18.5H128.173z"/>
+          </g>
+          <path fill="#FFFFFF" d="M60.498,28.266"/>
+          <path fill="#D22856" d="M60.462,28.016c-0.002-0.009-5.175-21.365-5.175-21.365C54.926,4.303,52.694,0,46.688,0 c-0.829,0-1.5,0.671-1.5,1.5s0.671,1.5,1.5,1.5c4.856,0,5.575,3.729,5.639,4.143l4.767,19.701h-2.073 c-0.742-5.927-5.802-10.531-11.927-10.531s-11.186,4.604-11.927,10.531h-1.82c-0.741-5.927-5.802-10.531-11.927-10.531 S6.235,20.917,5.493,26.844H3.42L8.187,7.143C8.25,6.729,8.97,3,13.826,3c0.829,0,1.5-0.671,1.5-1.5S14.655,0,13.826,0 C7.82,0,5.588,4.303,5.227,6.651c0,0-5.173,21.356-5.175,21.365c-0.266,1.109,0.531,1.826,1.426,1.826 c0.012,0,0.023,0.004,0.036,0.004h3.982c0.741,5.926,5.802,10.53,11.927,10.53s11.185-4.604,11.927-10.53h1.814 c0.742,5.926,5.802,10.53,11.927,10.53s11.186-4.604,11.927-10.53H59c0.012,0,0.023-0.004,0.036-0.004 C59.931,29.842,60.728,29.125,60.462,28.016z M26.315,29.844c-0.715,4.272-4.421,7.531-8.896,7.531s-8.18-3.259-8.896-7.531 c-0.082-0.488-0.135-0.988-0.135-1.5s0.053-1.011,0.135-1.5c0.715-4.271,4.421-7.531,8.896-7.531s8.18,3.26,8.896,7.531 c0.082,0.489,0.135,0.988,0.135,1.5S26.397,29.355,26.315,29.844z M51.99,29.844c-0.716,4.272-4.421,7.531-8.896,7.531 c-4.475,0-8.181-3.259-8.896-7.531c-0.082-0.488-0.135-0.988-0.135-1.5s0.053-1.011,0.135-1.5c0.716-4.271,4.421-7.531,8.896-7.531 c4.475,0,8.181,3.26,8.896,7.531c0.082,0.489,0.135,0.988,0.135,1.5S52.072,29.355,51.99,29.844z"/>
+        </svg>
     </a>
     <ul class="social">
       <li class="social__item">
@@ -198,9 +276,29 @@
       </li>
     </ul>
     <p class="page-footer__credits">
-      Разработано <a class="page-footer__academy-link" href="#"><img class="page-footer__academy-logo" src="http://placehold.it/150x100" width="150" height="100" alt="Логотип html academy"></a>
+      <span class="page-footer__credits-text">Разработано</span> <a class="page-footer__academy-link" href="#"><svg class="page-footer__academy-logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="26.943px" height="34.09px" viewBox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
+        <path d="M13.62,0.017L13.472,0L0,1.412v24.661l13.472,8.017l13.43-7.99l0.042-0.026V1.412L13.62,0.017z M25.019,12.127L13.495,5.334 l-0.001-0.104L13.407,5.28l-0.088-0.056v0.109L1.925,12.118V3.147l11.547-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5 l-4.479,2.64l-7.093-4.221l-0.013,1.415l5.904,3.513l-0.86,0.507l-5.031-2.992l-0.013,1.415l3.827,2.275l-0.782,0.523l-3.032-1.787 l-0.013,1.413l1.852,1.091l-1.8,1.081L2.034,13.622L13.405,6.787z M1.925,15.127l11.411,6.791l0.015,1.044l-7.941-4.728L5.395,19.65 l7.979,4.796l0.017,1.076l-7.972-4.741l-0.013,1.415l8.021,4.821l0.045,0.026l8.143-4.872v-1.268l-0.011-0.148v-3.761l3.415-2.036 v10.02L13.472,31.85L1.925,24.979V15.127z"/>
+      </svg></a>
     </p>
   </footer>
+
+  <script>
+    var navMain = document.querySelector('.main-nav');
+    var navToggle = document.querySelector('.main-nav__menu');
+
+    navMain.classList.remove('main-nav--nojs');
+
+    navToggle.addEventListener('click', function() {
+      if (navMain.classList.contains('main-nav--closed')) {
+        navMain.classList.remove('main-nav--closed');
+        navMain.classList.add('main-nav--opened');
+      } else {
+        navMain.classList.add('main-nav--closed');
+        navMain.classList.remove('main-nav--opened');
+      }
+    });
+  </script>
+
 </body>
 
 </html>
