--- a/source/photo.html
+++ b/source/photo.html
@@ -4,23 +4,27 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Пинк</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="format-detection" content="telephone=no">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <header class="page-header">
-    <nav class="main-nav page-header__menu">
-      <a class="page-header__logo" href="#">
-        <img class="page-header__logo-image" src="http://placehold.it/150x100" width="150" height="100" alt="Пинк">
-      </a>
-      <button class="page-header__menu">
-        <span class="visually-hidden">Меню</span>
-      </button>
+    <nav class="main-nav main-nav--opened page-header__menu">
+      <div class="main-nav__top">
+        <a class="main-nav__logo">
+          <img class="main-nav__logo-image" src="img/logo-pink-white-mobile.svg" width="75" height="22" alt="Пинк">
+        </a>
+        <button class="main-nav__menu">
+          <span class="visually-hidden">Меню</span>
+        </button>
+      </div>
       <ul class="main-nav__list">
         <li class="main-nav__item">
           <a class="main-nav__link" href="index.html">Главная</a>
         </li>
-        <li class="main-nav__item">
+        <li class="main-nav__item main-nav__item--active">
           <a class="main-nav__link">Фотографии</a>
         </li>
         <li class="main-nav__item">
@@ -33,31 +37,39 @@
     </nav>
   </header>
   <main class="page">
-    <div class="hero">
+    <div class="hero hero--photo">
       <h1 class="hero__text">Фотографии пользователей</h1>
     </div>
-    <p class="description">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</p>
+    <p class="description description--narrow">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</p>
     <ul class="users-posts">
       <li class="users-posts__item users-posts__item--pano">
         <p class="users-posts__title">Панорама дня</p>
         <div class="users-posts__photo users-posts__photo--pano">
           <a href="#">
-            <img class="users-posts__image" src="http://placehold.it/150x100" width="150" height="100" alt="пост пользователя">
+            <picture>
+              <source media="(min-width:660px)" srcset="img/panorama-tablet@1x.jpg">
+              <source media="(min-width:1200px)" srcset="img/panorama-desktop@1x.jpg">
+              <img class="users-posts__image" src="img/panorama-mobile@1x.jpg" width="320" height="137" alt="Панорама год с площадки для роупджампинга">
+            </picture>
           </a>
         </div>
-        <div class="users-posts__article">
+        <div class="users-posts__article users-posts__article--pano">
           <div class="users-posts__head">
             <p class="users-posts__author">Анна</p>
             <p class="users-posts__time">(5 минут назад)</p>
           </div>
-          <p class="users-posts__description">Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
-          <p class="users-posts__like">Нравится: 215</p>
+          <p class="users-posts__description users-posts__description--pano">Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
+          <p class="users-posts__like users-posts__like--pano">Нравится: 215</p>
         </div>
       </li>
       <li class="users-posts__item">
         <div class="users-posts__photo">
           <a href="#">
-            <img class="users-posts__image" src="http://placehold.it/150x100" width="150" height="100" alt="пост пользователя">
+            <picture>
+              <source media="(min-width:660px)" srcset="img/photo-car-tablet@1x.jpg">
+              <source media="(min-width:1200px)" srcset="img/photo-car-desktop@1x.jpg">
+              <img class="users-posts__image" src="img/photo-car-mobile@1x.jpg" width="280" height="180" alt="Белый легковой автомобиль">
+            </picture>
           </a>
         </div>
         <div class="users-posts__article">
@@ -72,7 +84,11 @@
       <li class="users-posts__item">
         <div class="users-posts__photo">
           <a href="#">
-            <img class="users-posts__image" src="http://placehold.it/150x100" width="150" height="100" alt="пост пользователя">
+            <picture>
+              <source media="(min-width:660px)" srcset="img/photo-drumset-tablet@1x.jpg">
+              <source media="(min-width:1200px)" srcset="img/photo-drumset-desktop@1x.jpg">
+              <img class="users-posts__image" src="img/photo-drumset-mobile@1x.jpg" width="280" height="180" alt="Барабанная установка">
+            </picture>
           </a>
         </div>
         <div class="users-posts__article">
@@ -87,7 +103,11 @@
       <li class="users-posts__item">
         <div class="users-posts__photo">
           <a href="#">
-            <img class="users-posts__image" src="http://placehold.it/150x100" width="150" height="100" alt="пост пользователя">
+            <picture>
+              <source media="(min-width:660px)" srcset="img/photo-window-tablet@1x.jpg">
+              <source media="(min-width:1200px)" srcset="img/photo-window-desktop@1x.jpg">
+              <img class="users-posts__image" src="img/photo-window-mobile@1x.jpg" width="280" height="180" alt="Окно офисного здания, выходящее на облачное небо">
+            </picture>
           </a>
         </div>
         <div class="users-posts__article">
@@ -102,7 +122,11 @@
       <li class="users-posts__item">
         <div class="users-posts__photo">
           <a href="#">
-            <img class="users-posts__image" src="http://placehold.it/150x100" width="150" height="100" alt="пост пользователя">
+            <picture>
+              <source media="(min-width:660px)" srcset="img/photo-fair-tablet@1x.jpg">
+              <source media="(min-width:1200px)" srcset="img/photo-fair-desktop@1x.jpg">
+              <img class="users-posts__image" src="img/photo-fair-mobile@1x.jpg" width="280" height="180" alt="Кубанская бахча">
+            </picture>
           </a>
         </div>
         <div class="users-posts__article">
@@ -117,8 +141,12 @@
       <li class="users-posts__item">
         <div class="users-posts__photo">
           <a href="#">
-          <img class="users-posts__image" src="http://placehold.it/150x100" width="150" height="100" alt="пост пользователя">
-        </a>
+            <picture>
+              <source media="(min-width:660px)" srcset="img/photo-pov-tablet@1x.jpg">
+              <source media="(min-width:1200px)" srcset="img/photo-pov-desktop@1x.jpg">
+              <img class="users-posts__image" src="img/photo-pov-mobile@1x.jpg" width="280" height="180" alt="Вид от первого лица на ночи человека, сидящего на обрыве">
+            </picture>
+          </a>
         </div>
         <div class="users-posts__article">
           <div class="users-posts__head">
@@ -132,7 +160,11 @@
       <li class="users-posts__item">
         <div class="users-posts__photo">
           <a href="#">
-            <img class="users-posts__image" src="http://placehold.it/150x100" width="150" height="100" alt="пост пользователя">
+            <picture>
+              <source media="(min-width:660px)" srcset="img/photo-wing-tablet@1x.jpg">
+              <source media="(min-width:1200px)" srcset="img/photo-wing-desktop@1x.jpg">
+              <img class="users-posts__image" src="img/photo-wing-mobile@1x.jpg" width="280" height="180" alt="Крыло летящего самолета на фоне заката">
+            </picture>
           </a>
         </div>
         <div class="users-posts__article">
@@ -145,61 +177,101 @@
         </div>
       </li>
     </ul>
-    <p class="description">Затмите их всех!<br> Выкладывайте все, что накопилось в телефоне!</p>
+    <p class="description description--photo-middle">Затмите их всех!<br> Выкладывайте все, что накопилось в телефоне!</p>
     <form class="user-upload" action="https://echo.htmlacademy.ru" method="post">
       <h2 class="visually-hidden">Загрузить фотографию</h2>
       <div class="user-upload__photo">
-        <img class="user-upload__image" src="http://placehold.it/150x100" width="150" height="100" alt="загружаемое фото">
+        <picture>
+          <source media="(min-width:660px)" srcset="img/photo-road-tablet@1x.jpg">
+          <source media="(min-width:1200px)" srcset="img/photo-road-desktop@1x.jpg">
+          <img class="user-upload__image" src="img/photo-road-mobile@1x.jpg" width="280" height="374" alt="загружаемое фото">
+        </picture>
       </div>
-      <ul class="edit-photo">
-        <li class="edit-photo__item">
-          <label for="crop" class="edit-photo__tool edit-photo__tool--active">
+      <div class="edit-block">
+        <div class="edit-photo">
+          <ul class="edit-photo__tools-list">
+            <li class="edit-photo__tool-item">
+              <label for="crop" class="edit-photo__tool edit-photo__tool--active">
             <span class="visually-hidden">обрезать фото</span>
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 48 48" enable-background="new 0 0 48 48" xml:space="preserve">
+              <path fill="none" d="M0,0h48v48H0V0z"/>
+              <path d="M34,30h4V14c0-2.21-1.79-4-4-4H18v4h16V30z M14,34V2h-4v8H2v4h8v20c0,2.21,1.79,4,4,4h20v8h4v-8h8v-4H14z"/>
+            </svg>
           </label>
-          <input id="crop" class="edit-photo__range" type="range" min="0" max="50" step="1" value="40">
-        </li>
-        <li class="edit-photo__item">
-          <label for="color" class="edit-photo__tool">
+            </li>
+            <li class="edit-photo__tool-item">
+              <label for="color" class="edit-photo__tool">
             <span class="visually-hidden">поменять цвет</span>
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 48 48" enable-background="new 0 0 48 48" xml:space="preserve">
+              <path fill="none" d="M0,0h48v48H0V0z"/>
+              <path d="M33.12,17.88L15.24,0l-2.83,2.83l4.76,4.76L6.88,17.88c-1.17,1.17-1.17,3.07,0,4.24l11,11C18.46,33.71,19.23,34,20,34 s1.54-0.29,2.12-0.88l11-11C34.29,20.95,34.29,19.05,33.12,17.88z M10.41,20L20,10.42L29.59,20H10.41z M38,23c0,0-4,4.33-4,7 c0,2.21,1.79,4,4,4s4-1.79,4-4C42,27.33,38,23,38,23z"/>
+              <rect y="40" width="48" height="3"/>
+            </svg>
           </label>
-          <input id="color" class="edit-photo__range" type="range" min="0" max="50" step="1" value="0">
-        </li>
-        <li class="edit-photo__item">
-          <label for="contrast" class="edit-photo__tool">
+            </li>
+            <li class="edit-photo__tool-item">
+              <label for="contrast" class="edit-photo__tool edit-photo__tool--contrast">
             <span class="visually-hidden">изменить контраст</span>
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-36 -8 32 32" enable-background="new -35.422 -7.96 31.92 31.92" xml:space="preserve">
+              <path d="M-19.462-3.96c6.595,0,11.96,5.365,11.96,11.96s-5.365,11.96-11.96,11.96S-31.422,14.595-31.422,8 S-26.057-3.96-19.462-3.96 M-19.462-7.96c-8.814,0-15.96,7.145-15.96,15.96c0,8.813,7.146,15.96,15.96,15.96S-3.502,16.813-3.502,8 C-3.502-0.815-10.648-7.96-19.462-7.96L-19.462-7.96z"/>
+              <path d="M-19.462,16.331c4.706,0,8.52-3.813,8.52-8.52c0-4.705-3.813-8.519-8.52-8.519"/>
+            </svg>
           </label>
-          <input id="contrast" class="edit-photo__range" type="range" min="0" max="50" step="1" value="0">
-        </li>
-      </ul>
-      <div class="user-upload__buttons">
-        <button class="round-button user-upload__button user-upload__button--upload" type="submit">Запостить</button>
-        <button class="round-button user-upload__button user-upload__button--cancel" type="reset">Отмена</button>
+            </li>
+          </ul>
+          <ul class="edit-photo__range-list">
+            <li class="edit-photo__range-item edit-photo__range-item--active">
+              <input id="crop" class="edit-photo__range" type="range" min="0" max="50" step="1" value="40">
+            </li>
+            <li class="edit-photo__range-item">
+              <input id="color" class="edit-photo__range" type="range" min="0" max="50" step="1" value="0">
+            </li>
+            <li class="edit-photo__range-item">
+              <input id="contrast" class="edit-photo__range" type="range" min="0" max="50" step="1" value="0">
+            </li>
+          </ul>
+        </div>
+        <div class="user-upload__buttons">
+          <button class="round-button user-upload__button user-upload__button--upload" type="submit">Запостить</button>
+          <button class="round-button user-upload__button user-upload__button--cancel" type="reset">Отмена</button>
+        </div>
       </div>
     </form>
   </main>
   <footer class="page-footer">
     <a class="page-footer__logo" href="#">
-      <img class="page-footer__logo-image" src="http://placehold.it/150x100" width="150" height="100" alt="пинк лого">
+        <svg class="page-footer__logo-image" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="146.3px" height="40.375px" viewBox="0 0 146.3 40.375" enable-background="new 0 0 146.3 40.375" xml:space="preserve">
+          <g>
+            <path fill="#283645" d="M71.874,18.661c0-0.708,0.58-1.288,1.256-1.288h7.18c5.087,0,8.436,2.704,8.436,7.146v0.063 c0,4.86-4.057,7.373-8.854,7.373h-5.475v6.825c0,0.708-0.58,1.287-1.289,1.287c-0.676,0-1.256-0.58-1.256-1.287L71.874,18.661 L71.874,18.661z M79.988,29.641c3.734,0,6.182-1.996,6.182-4.959v-0.062c0-3.221-2.414-4.894-6.053-4.894h-5.699v9.917h5.57V29.641 z"/>
+            <path fill="#283645" d="M93.603,18.5c0-0.708,0.579-1.288,1.255-1.288c0.709,0,1.288,0.58,1.288,1.288v20.283 c0,0.708-0.579,1.287-1.288,1.287c-0.676,0-1.255-0.579-1.255-1.287V18.5z"/>
+            <path fill="#283645" d="M102.744,18.532c0-0.676,0.58-1.256,1.256-1.256h0.354c0.58,0,0.935,0.29,1.288,0.74l13.684,17.45V18.468 c0-0.676,0.547-1.256,1.256-1.256c0.676,0,1.225,0.58,1.225,1.256v20.349c0,0.677-0.48,1.19-1.158,1.19h-0.129 c-0.548,0-0.936-0.321-1.318-0.772l-13.976-17.867v17.449c0,0.677-0.547,1.257-1.257,1.257c-0.676,0-1.223-0.58-1.223-1.257V18.532 H102.744z"/>
+            <path fill="#283645" d="M128.173,18.5c0-0.708,0.58-1.288,1.257-1.288c0.708,0,1.286,0.58,1.286,1.288v12.331l12.848-13.16 c0.29-0.257,0.579-0.451,0.998-0.451c0.676,0,1.225,0.612,1.225,1.256c0,0.354-0.162,0.644-0.42,0.901l-7.984,7.92l8.564,10.561 c0.225,0.291,0.354,0.547,0.354,0.936c0,0.676-0.577,1.288-1.285,1.288c-0.482,0-0.807-0.259-1.03-0.58l-8.401-10.464l-4.863,4.861 v4.895c0,0.708-0.578,1.288-1.286,1.288c-0.677,0-1.257-0.58-1.257-1.288V18.5H128.173z"/>
+          </g>
+          <path fill="#FFFFFF" d="M60.498,28.266"/>
+          <path fill="#D22856" d="M60.462,28.016c-0.002-0.009-5.175-21.365-5.175-21.365C54.926,4.303,52.694,0,46.688,0 c-0.829,0-1.5,0.671-1.5,1.5s0.671,1.5,1.5,1.5c4.856,0,5.575,3.729,5.639,4.143l4.767,19.701h-2.073 c-0.742-5.927-5.802-10.531-11.927-10.531s-11.186,4.604-11.927,10.531h-1.82c-0.741-5.927-5.802-10.531-11.927-10.531 S6.235,20.917,5.493,26.844H3.42L8.187,7.143C8.25,6.729,8.97,3,13.826,3c0.829,0,1.5-0.671,1.5-1.5S14.655,0,13.826,0 C7.82,0,5.588,4.303,5.227,6.651c0,0-5.173,21.356-5.175,21.365c-0.266,1.109,0.531,1.826,1.426,1.826 c0.012,0,0.023,0.004,0.036,0.004h3.982c0.741,5.926,5.802,10.53,11.927,10.53s11.185-4.604,11.927-10.53h1.814 c0.742,5.926,5.802,10.53,11.927,10.53s11.186-4.604,11.927-10.53H59c0.012,0,0.023-0.004,0.036-0.004 C59.931,29.842,60.728,29.125,60.462,28.016z M26.315,29.844c-0.715,4.272-4.421,7.531-8.896,7.531s-8.18-3.259-8.896-7.531 c-0.082-0.488-0.135-0.988-0.135-1.5s0.053-1.011,0.135-1.5c0.715-4.271,4.421-7.531,8.896-7.531s8.18,3.26,8.896,7.531 c0.082,0.489,0.135,0.988,0.135,1.5S26.397,29.355,26.315,29.844z M51.99,29.844c-0.716,4.272-4.421,7.531-8.896,7.531 c-4.475,0-8.181-3.259-8.896-7.531c-0.082-0.488-0.135-0.988-0.135-1.5s0.053-1.011,0.135-1.5c0.716-4.271,4.421-7.531,8.896-7.531 c4.475,0,8.181,3.26,8.896,7.531c0.082,0.489,0.135,0.988,0.135,1.5S52.072,29.355,51.99,29.844z"/>
+        </svg>
     </a>
     <ul class="social">
-      <li class="social__item social__item--twitter">
+      <li class="social__item">
         <a href="#" class="social__link social__link--twitter">
           <span class="visually-hidden">ссылка на twitter</span>
         </a>
       </li>
-      <li class="social__item social__item--facebook">
+      <li class="social__item">
         <a href="#" class="social__link social__link--facebook">
           <span class="visually-hidden">ссылка на facebook</span>
         </a>
       </li>
-      <li class="social__item social__item--youtube">
+      <li class="social__item">
         <a href="#" class="social__link social__link--youtube">
           <span class="visually-hidden">ссылка на youtube</span>
         </a>
       </li>
     </ul>
-    <p class="page-footer__credit-photos">
-      Разработано <img class="page-footer__academy-logo" src="http://placehold.it/150x100" width="150" height="100" alt="Логотип html academy">
+    <p class="page-footer__credits">
+      <span class="page-footer__credits-text">Разработано</span> <a class="page-footer__academy-link" href="#"><svg class="page-footer__academy-logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="26.943px" height="34.09px" viewBox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
+        <path d="M13.62,0.017L13.472,0L0,1.412v24.661l13.472,8.017l13.43-7.99l0.042-0.026V1.412L13.62,0.017z M25.019,12.127L13.495,5.334 l-0.001-0.104L13.407,5.28l-0.088-0.056v0.109L1.925,12.118V3.147l11.547-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5 l-4.479,2.64l-7.093-4.221l-0.013,1.415l5.904,3.513l-0.86,0.507l-5.031-2.992l-0.013,1.415l3.827,2.275l-0.782,0.523l-3.032-1.787 l-0.013,1.413l1.852,1.091l-1.8,1.081L2.034,13.622L13.405,6.787z M1.925,15.127l11.411,6.791l0.015,1.044l-7.941-4.728L5.395,19.65 l7.979,4.796l0.017,1.076l-7.972-4.741l-0.013,1.415l8.021,4.821l0.045,0.026l8.143-4.872v-1.268l-0.011-0.148v-3.761l3.415-2.036 v10.02L13.472,31.85L1.925,24.979V15.127z"/>
+      </svg></a>
     </p>
   </footer>
 </body>
